# University

./: .gitignore  README.md
Haskell/tutorial1-release/: tutorial1.cabal
Haskell/tutorial1-release/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/flag-cache/: aeson-0.11.2.1-4b9414e88af007ec0f3c0111bed561b9  attoparsec-0.13.0.2-5c8217f74f208c82613532fc63bbbfeb  base-compat-0.9.1-88d2eb460760f8335257e69c0f87aa82  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  doctest-0.11.0-f2de5e3c436bd40e7f55a07f2faf9851  doctest-discover-0.1.0.7-8aa4073730c676dbe210ea8bffd8d092  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  ghc-paths-0.1.0.9-1273b3394cc75fcfece5f7597c3cfdec  hashable-1.2.4.0-eb8410705fa05638eebff0131e5dac80  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  scientific-0.3.4.9-f1339c517d590960c594442217ee35c2  semigroups-0.18.1-48610a3351fd01d4938b67b739b4380c  syb-0.6-d154b8ffa473f7cfcfc32ca4d99f62f7  tagged-0.8.4-9a04b6ba5af4681c23b22a393e2724e7  text-1.2.2.1-f5b1651133426aa2c83c19d64d248779  tutorial1-0.1.0.0-6c49be7c3dbc19915974dd120ab5e39d  tutorial1-0.1.0.0-941bcad5ecf904e64e54e647d348adcc  tutorial1-0.1.0.0-a541987e858ff15bb30117ae549fa62c  unordered-containers-0.2.7.1-d64b45151d7f8bba4935d69920c8c76d  vector-0.11.0.0-299aefb173ce5a731565d31f609a0cfd
Haskell/tutorial1-release/.stack-work/install/x86_64-linux/lts-6.15/7.10.3/lib/x86_64-linux-ghc-7.10.3/tutorial1-0.1.0.0-Cds5q0xitq24pmmLLyZYpg/: Tutorial1.dyn_hi  Tutorial1.hi
Haskell/tutorial1-release/app/: Main.hs
Haskell/tutorial1-release/src/: Tutorial1.hs
(+221 files in other folders)
