name:                tutorial1
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/bixuanzju/tutorial1#readme
license:             BSD3
license-file:        LICENSE
author:              Jeremy Bi
maintainer:          bixuanxbi@gmail.com
copyright:           2016 Jeremy Bi, The University of Hong Kong
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tutorial1
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tutorial1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tutorial1
  default-language:    Haskell2010

test-suite tutorial1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             doctest-driver.hs
  build-depends:       base
                     , tutorial1
                     , doctest
                     , doctest-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bixuanzju/tutorial1
